# xvrt

./: .gitignore  README.md  mdim-vrt-writer-plan.md  pyproject.toml
schema/: README.md
scripts/: validate_roundtrip.py  validate_xsd.py
tests/: smoke.py  test_rules.py
xvrt/: __init__.py  _coords.py  _dtype.py  _errors.py  _sources.py  _writer.py  _xml.py  accessor.py
