[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xvrt"
version = "0.0.1.9000"
description = "Write GDAL multidimensional VRT from xarray Datasets (pure Python)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hypertidy" }]
dependencies = [
  "numpy>=1.24",
  "xarray>=2023.12",
]

[project.optional-dependencies]
# CRS auto-detection from CF metadata.
cf = ["cf_xarray"]
# XSD validation in tests.
test = ["lxml", "netCDF4", "pytest"]
# rioxarray as an additional CRS source.
rio = ["rioxarray"]

[project.urls]
Homepage = "https://github.com/hypertidy/xvrt"
Plan = "https://github.com/hypertidy/xvrt/blob/main/mdim-vrt-writer-plan.md"

[tool.hatch.build.targets.wheel]
packages = ["xvrt"]
